Struktura forme za unos izlaska

--- a/index.html
+++ b/index.html
@@ -7,5 +7,35 @@
 </head>
 <body>
     
+    <label>Ocena:</label>
+    <input type="number">
+    <label>Datum izlaska na ispit:</label>
+    <input type="date">
+    <br>
+    <label>Broj indeksa:</label>
+    <input type="text">
+    <label>Rok:</label>
+    <input type="radio" value="Januar">
+    <label>Januar</label>
+    <input type="radio" value="April">
+    <label>April</label>
+    <input type="radio" value="Jun">
+    <label>Jun</label>
+    <input type="radio" value="Septembar">
+    <label>Septembar</label>
+    <br>
+    <label>Redni broj izlaska na ispit:</label>
+    <select>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+    </select>
+    <input type="checkbox">
+    <label>Polozio/la:</label>
+    <br>
+    <button>Posalji</button>
+    
+
+
 </body>
 </html>
